--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:label="Currency Converter"
-        android:name="${applicationName}"
+        android:name="Currency Converter"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
