--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+package="currency_converter"
+>
     <application
-        android:label="Currency Converter"
+        android:label="currency_converter"
         android:name="Currency Converter"
         android:icon="@mipmap/launcher_icon">
         <activity
